--- a/src/BlazorApp/wwwroot/sample-data/projects.json
+++ b/src/BlazorApp/wwwroot/sample-data/projects.json
@@ -1,8 +1,8 @@
 [
   {
-    "title": "10 Things To Know About Azure Static Web Apps 🎉",
-    "description": "Collaboration to create a beginner friendly article to help explain Azure Static Web Apps and tooling to get started.",
-    "url": "https://dev.to/azure/10-things-to-know-about-azure-static-web-apps-3n4i"
+    "title": "Orangge's RPG",
+    "description": "A remade of Orangge's RPG from bedrock to java edition",
+    "url": "122leeje.tplinkdns.com:25565"
   },
   {
     "title": "Web Development for Beginners",
